--- a/Assignment 3/styles/style.css
+++ b/Assignment 3/styles/style.css
@@ -1,3 +1,15 @@
+#prev{
+    text-align: right;
+    font-size: medium;
+    padding: 3%;
+    width: 100%;
+    height: 50px;
+    border: none;
+    outline: none;
+    font-weight: normal;
+}
+
+
 
 button{
     height: 50px;
@@ -5,4 +17,11 @@ button{
 
 input{
     height: 80px;
+    font-size: 25px;
+    text-align: right;
+    font-weight: bold;
+}
+
+.btn-opac{
+    opacity: 50%;
 }
