--- a/to do list/styles/style.css
+++ b/to do list/styles/style.css
@@ -5,9 +5,14 @@
     margin-top: 100px;
 }
 
+#navbar{
+    background-color: white;
+    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+}
+
 
 dialog{
-    width: 300px;
+    width: 400px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);   
 }
 
@@ -15,4 +20,8 @@ dialog{
 i:hover{
     cursor: pointer;
     color: gray;
+}
+
+button {
+    cursor: pointer;
 }
